front end updated

--- a/tongol-a/university/college.html
+++ b/tongol-a/university/college.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSES</a></li>
+                    <li><a href="course.html">ACADEMICS</a></li>
                     <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="login.html">LOGIN</a></li>
@@ -43,45 +43,49 @@
     </section>
 <!----------------AcadPrograms------------------>
 
-<section class="course">
+<section class="course2">
     <h1>Our College</h1>
     <p>HAU offers cutting-edge academic programs for the undergraduate level. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities.</p>
-    <div class="row">
-        <div class="course-col">
-            <h3>School of Business and Accountancy</h3>
-            <p>Two years after Holy Angel reopened at the end of World War II, the school was rapidly moving forward. The student population doubled in size in the School Year 1947-48 after the closure of Angeles Academy. It opened a two-year education program leading to an Elementary Teacher's Certificate (ETC) because of the demand for qualified teachers following the post-war construction of public elementary schools.</p>
+    <div class="course-row">
+        <div class="course2-col">
+            <img src="images/sba.png">
+                <h3>School of Business and Accountancy</h3>
+                <p>To provide advanced, high quality and accessible business education in the field of management, accountancy, entrepreneurship, and public governance to students, professionals and leaders through a wide range of relevant educational experience.</p>
         </div>
-        <div class="course-col">
-            <h3>College</h3>
-            <p>HAU offers cutting-edge academic programs for the undergraduate level. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities.</p>
+        <div class="course2-col">
+            <img src="images/sea.png">
+                <h3>School of Engineering and Architecture</h3>
+                <p>The School shall provide accessible quality engineering and architecture education leading to highly competent professional; continually contribute to the advancement of knowledge and technology through research activities; and support countryside development through environmental preservation and community involvement.</p>
+           </div>
+        <div class="course2-col">
+            <img src="images/sas.png">
+                <h3>School of Arts and Sciences</h3>
+                <p>The School of Arts and Sciences is a premiere college that serves as an avenue for developing students’ learning competencies within and across the many disciplines of human inquiry, particularly in mass media and psychology, attaining excellence in instruction, research and community development.</p>
         </div>
-        <div class="course-col">
-            <h3>Graduate School</h3>
-            <p>The Graduate School envisions itself to be one of the centers of excellence in graduate education and research in the Asia Pacific Region that will produce graduates who are role model catalysts for countryside development in the fields of Arts and Sciences, Business, Education, Information Technology, Engineering and Nursing education.</p>
+        <div class="course2-col">
+            <img src="images/sed.png">
+                <h3>School of Education</h3>
+                <p>To provide quality education that enables students to be critical thinkers, mindful of their responsibilities to society, and equipped with holistic education catering to the heart and soul as well as to the body and mind.</p>
         </div>
-    </div>
-</section>
-
-<!-------------facilities---------------->
-
-<section class="facilities">
-    <h1>Our Facilities</h1>
-    
-    <div class="row">
-        <div class="facilities-col">
-            <img src="images/library.png">
-                <h3>Study Areas</h3>
-                <p>The Library has open reading areas in the 2nd and 3rd floors of the library for reading and serious study. They are available on a first come-first serve basis.</p>
+        <div class="course2-col">
+            <img src="images/shtm.png">
+                <h3>School of Hospitality and Tourism Management</h3>
+                <p>To provide the students with broad-based views of the service management, hospitality, and tourism disciplines based on the underlying concept of quality service management. </p>
         </div>
-        <div class="facilities-col">
-            <img src="images/discussion.jpg">
-                <h3>Discussion Rooms</h3>
-                <p>Discussion rooms are available for currently enrolled students. Inquiries for the use of these rooms should be made at the Office of the Chief Librarian (2nd Floor).</p>
+        <div class="course2-col">
+            <img src="images/snams.png">
+                <h3>School of Nursing and Allied Medical Sciences</h3>
+                <p>To offer accessible quality nursing and allied medical science education that transforms students into conscientious, competent, and compassionate professionals. </p>
         </div>
-        <div class="facilities-col">
-            <img src="images/faculty.jpg">
-                <h3>Faculty Room</h3>
-                <p>Located at the 2nd floor of the library and is provided with two (2) computer units w/ internet connections. It can accommodate 12-15 faculty at one time.</p>
+        <div class="course2-col">
+            <img src="images/soc.png">
+                <h3>School of Computing</h3>
+                <p>To offer quality education and produce technically-competent and globally competitive professionals who are self-reliant, morally and spiritually upright, adaptive to current and emerging technologies, and who contribute to community building. </p>
+        </div>
+        <div class="course2-col">
+            <img src="images/ccjef.png">
+                <h3>College Criminal Justice Education and Forensics</h3>
+                <p>A center of excellence in the criminal justice education and forensics producing top caliber professionals who are globally competitive and are equipped with well-founded knowledge in the field of law enforcement, criminal justice and forensics.</p>
         </div>
     </div>
 </section>
@@ -98,6 +102,7 @@
     <a href="https://www.instagram.com/holyangel1933/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/school/holyangel1933/" target="_blank"><i class="fa fa-linkedin"></i></a>
 </div>
+<p>Copyright © 2022 Holy Angel University • All Rights Reserved</p>
 <p>Made with <i class="fa fa-heart-o"></i> by <a href="https://www.youtube.com/channel/UCCt182VRsFF5bwdBi1Ktpqg" target="_blank" class="red-btn">Albert Tongol</a></p>
 </section>
 
