--- a/tongol-a/university/course.html
+++ b/tongol-a/university/course.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSES</a></li>
+                    <li><a href="course.html">ACADEMICS</a></li>
                     <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="login.html">LOGIN</a></li>
@@ -39,25 +39,30 @@
 
         </nav>
 
-        <h1>Academic Programs</h1>
+        <h1>Academics</h1>
     </section>
 <!----------------AcadPrograms------------------>
 
 <section class="course">
     <h1>Academic Programs</h1>
-    <p>HAU offers various academic programs from basic education, undergraduate, to postgraduate levels. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities. </p>
+    <div class="index">
+        <p>HAU offers various academic programs from basic education, undergraduate, to postgraduate levels. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities. </p>
+    </div>
     <div class="row">
         <div class="course-col">
             <h3>Basic Education</h3>
             <p>The Laboratory Elementary School was established in 1960 primarily as a training ground for the students of the College of Education. A Grade One class was initially opened with the children of the workers of the founder, Don Juan D. Nepomuceno, as the pupils who all studied free of charge.</p>
+            <a href="basicEd.html" class="red-btn">Explore Programs</a>
         </div>
         <div class="course-col">
             <h3>College</h3>
             <p>HAU offers cutting-edge academic programs for the undergraduate level. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities.</p>
+            <a href="college.html" class="red-btn">Explore Programs</a>
         </div>
         <div class="course-col">
             <h3>Graduate School</h3>
             <p>The Graduate School envisions itself to be one of the centers of excellence in graduate education and research in the Asia Pacific Region that will produce graduates who are role model catalysts for countryside development in the fields of Arts and Sciences, Business, Education, Information Technology, Engineering and Nursing education.</p>
+            <a href="grad.html" class="red-btn">Explore Programs</a>
         </div>
     </div>
 </section>
@@ -98,6 +103,7 @@
     <a href="https://www.instagram.com/holyangel1933/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/school/holyangel1933/" target="_blank"><i class="fa fa-linkedin"></i></a>
 </div>
+<p>Copyright © 2022 Holy Angel University • All Rights Reserved</p>
 <p>Made with <i class="fa fa-heart-o"></i> by <a href="https://www.youtube.com/channel/UCCt182VRsFF5bwdBi1Ktpqg" target="_blank" class="red-btn">Albert Tongol</a></p>
 </section>
 
