--- a/tongol-a/university/grad.html
+++ b/tongol-a/university/grad.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSES</a></li>
+                    <li><a href="course.html">ACADEMICS</a></li>
                     <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="login.html">LOGIN</a></li>
@@ -43,46 +43,35 @@
     </section>
 <!----------------AcadPrograms------------------>
 
-<section class="course">
-    <h1>Academic Programs</h1>
-    <p>HAU offers various academic programs from basic education, undergraduate, to postgraduate levels. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities. </p>
-    <div class="row">
-        <div class="course-col">
-            <h3>Basic Education</h3>
-            <p>The Laboratory Elementary School was established in 1960 primarily as a training ground for the students of the College of Education. A Grade One class was initially opened with the children of the workers of the founder, Don Juan D. Nepomuceno, as the pupils who all studied free of charge.</p>
-        </div>
-        <div class="course-col">
-            <h3>College</h3>
-            <p>HAU offers cutting-edge academic programs for the undergraduate level. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities.</p>
-        </div>
-        <div class="course-col">
-            <h3>Graduate School</h3>
-            <p>The Graduate School envisions itself to be one of the centers of excellence in graduate education and research in the Asia Pacific Region that will produce graduates who are role model catalysts for countryside development in the fields of Arts and Sciences, Business, Education, Information Technology, Engineering and Nursing education.</p>
-        </div>
-    </div>
-</section>
-
-<!-------------facilities---------------->
-
-<section class="facilities">
-    <h1>Our Facilities</h1>
-    
-    <div class="row">
+<section class="course2">
+    <h1>Program Offerings</h1>
+    <p>The Graduate School envisions itself to be one of the centers of excellence in graduate education and research in the Asia Pacific Region that will produce graduates who are role model catalysts for countryside development in the fields of Arts and Sciences, Business, Education, Information Technology, Engineering and Nursing education.</p>
+    <div class="course-row">
         <div class="facilities-col">
-            <img src="images/library.png">
-                <h3>Study Areas</h3>
-                <p>The Library has open reading areas in the 2nd and 3rd floors of the library for reading and serious study. They are available on a first come-first serve basis.</p>
+            <img src="images/grad1.jpg">
+                <h3>Master of Business Administration</h3>
+                <p>The Master of Business Management program is designed for practitioners and executives of both private and public institutions as well as individuals who intendto enhance their knowledge and skills in the practical applications of management theories, research and quantitative methods of managing business.</p>
         </div>
         <div class="facilities-col">
-            <img src="images/discussion.jpg">
-                <h3>Discussion Rooms</h3>
-                <p>Discussion rooms are available for currently enrolled students. Inquiries for the use of these rooms should be made at the Office of the Chief Librarian (2nd Floor).</p>
+            <img src="images/grad2.jpg">
+                <h3>Master of Business Administration</h3>
+                <p>The Doctor of Business Administration program is designed to advance the professional development of experienced business management graduates and professionalsby extending their knowledge and equipping them with broad research and process business management skills, enabling them to make a key leadership contribution to their chosen fields and do research in such areas as information technology management, finance, marketing, human resourcemanagement, operations, and leadership.</p>
         </div>
         <div class="facilities-col">
-            <img src="images/faculty.jpg">
-                <h3>Faculty Room</h3>
-                <p>Located at the 2nd floor of the library and is provided with two (2) computer units w/ internet connections. It can accommodate 12-15 faculty at one time.</p>
+            <img src="images/grad3.jpg">
+                <h3>Master of Business Administration</h3>
+                <p>The Master of Business Administration (MBA) in Leadership for a SustainableEconomy program, also known as the Green MBA, is a combination of the traditional MBA program and the new business sustainable track. The MBA in Leadership for a Sustainable program provides the students with a businessfoundation to perform effectively in all areas of organization and, at the same time, equips students with leadership competencies needed to embrace the emerging challenges on the sustainability agenda and address the issues in a responsibleway.</p>
         </div>
+        <div class="facilities-col">
+            <img src="images/grad4.jpg">
+                <h3>Master in Public Administration</h3>
+                <p>The Master in Public Administration program is designed for governmentadministrators, policy makers, officials, practitioners and executives of private, public and non- governmental organizations as well as individuals who are interested to learn and enhance their knowledge and skills in the formulation ofpublic policy, administrative reforms and effective governance.</p>
+        </div>
+        <div class="facilities-col">
+            <img src="images/grad5.jpg">
+                <h3>Master of Science in Accountancy</h3>
+                <p>The Master of Science in Accountancy program is designed to develop the practitioners of accounting related functions with a high level of theoretical knowledge on advanced accounting and research principles, incorporating more quantitative and re- search-oriented subjects that will enable the students to address the technical and operational challenges of accounting profession.</p>
+        </div>       
     </div>
 </section>
 
@@ -98,6 +87,7 @@
     <a href="https://www.instagram.com/holyangel1933/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/school/holyangel1933/" target="_blank"><i class="fa fa-linkedin"></i></a>
 </div>
+<p>Copyright © 2022 Holy Angel University • All Rights Reserved</p>
 <p>Made with <i class="fa fa-heart-o"></i> by <a href="https://www.youtube.com/channel/UCCt182VRsFF5bwdBi1Ktpqg" target="_blank" class="red-btn">Albert Tongol</a></p>
 </section>
 
