--- a/tongol-a/university/index.html
+++ b/tongol-a/university/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSES</a></li>
+                    <li><a href="course.html">ACADEMICS</a></li>
                     <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="login.html">LOGIN</a></li>
@@ -46,11 +46,13 @@
         </div>
 
     </section>
-<!-----------------Course------------------>
+<!-----------------AcadPrograms------------------>
 
 <section class="course">
     <h1>Academic Programs</h1>
-    <p>HAU offers various academic programs from basic education, undergraduate, to postgraduate levels. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities. </p>
+    <div class="index">
+        <p>HAU offers various academic programs from basic education, undergraduate, to postgraduate levels. Regardless of the area of discipline you choose, HAU is committed to provide transformative education to make a difference, hone your values, and develop your capabilities. </p>
+    </div>
     <div class="row">
         <div class="course-col">
             <h3>Basic Education</h3>
@@ -157,7 +159,7 @@
 
 <section class="cta">
     <h1>Enroll For Various Online Courses <br> Anywhere From Around the World</h1>
-    <a href="" class="hero-btn">Contact Us</a>
+    <a href="contact.html" class="hero-btn">Contact Us</a>
 </section>
 
 <!--------------------Footer---------------------->
@@ -172,6 +174,7 @@
     <a href="https://www.instagram.com/holyangel1933/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/school/holyangel1933/" target="_blank"><i class="fa fa-linkedin"></i></a>
 </div>
+<p>Copyright © 2022 Holy Angel University • All Rights Reserved</p>
 <p>Made with <i class="fa fa-heart-o"></i> by <a href="https://www.youtube.com/channel/UCCt182VRsFF5bwdBi1Ktpqg" target="_blank" class="red-btn">Albert Tongol</a></p>
 </section>
 
