--- a/tongol-a/university/about.html
+++ b/tongol-a/university/about.html
@@ -28,34 +28,55 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="course.html">COURSES</a></li>
+                    <li><a href="course.html">ACADEMICS</a></li>
                     <li><a href="news.html">NEWS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="login.html">LOGIN</a></li>
                 </ul>
             </div>
-
             <i class="fa fa-bars" onclick="showMenu()"></i>
 
         </nav>
 
-        <h1>About Us</h1>
+        <h1>About</h1>
     </section>
-<!-----------------about us content------------------>
+<!----------------history content------------------>
 
-<section class="about-us">
-    <div class="column">
-        <div class="about-col">
-            <h1>History</h1>
-        <div class="about-col">
-            <div class="left">
-                <img src="images/history1.jpg">
-            </div> 
-        </div>
-    </div>
-    <div class="about-col">
-        <p>In June 1933, Holy Angel Academy (HAA) opened its doors to a modest group of 78 high school students in the Holy Rosary Parish Convent. It was initiated through the joint efforts of the late Don Juan D. Nepomuceno, a known philanthropist/prominent businessman and Fr. Pedro P. Santos, then parish priest of the town of Angeles and later Archbishop of Nueva Caceres. Its primary purpose was to offer Catholic education in the secondary level, which was the felt need of the community at that time. It was organized as a non-stock, non-profit corporation oriented towards service to the community.
-        <a href="history.html" class="red-btn">Continue Reading</a></p>
+<section class="history-content">
+    <div class="row">
+        <div class="history-left">
+            <h2>The Early Years</h2>
+            <p>In June 1933, Holy Angel Academy (HAA) opened its doors to a modest group of 78 high school students in the Holy Rosary Parish Convent. It was initiated through the joint efforts of the late Don Juan D. Nepomuceno, a known philanthropist/prominent businessman and Fr. Pedro P. Santos, then parish priest of the town of Angeles and later Archbishop of Nueva Caceres. Its primary purpose was to offer Catholic education in the secondary level, which was the felt need of the community at that time. It was organized as a non-stock, non-profit corporation oriented towards service to the community.</p>
+            <br>
+            <img src="images/history1.jpg">
+            <br><br>
+            <p>The founders employed the able leadership of Ricardo V. Flores, an energetic educator from Pagsanjan, Laguna whose efforts, commitment and perseverance brought forth in two months the opening of a complete secondary school and the issuance of government recognition in February 1934. Consequently, the Holy Angel Academy (HAA) became the first Catholic co-educational high school run by laypersons with the First Friday devotion to the Sacred Heart of Jesus, as its initial signature landmark. By 1940, HAA moved from the Parish Convent to its first building (present Don Juan D. Nepomuceno Building or DJDN Building) to accommodate its expanding enrollment.</p>
+            <br>
+            <p>When World War II broke out, classes were suspended and resumed only in 1945. On May 8, 1947 the Academy was given new government recognition for its General Secondary Education Program. In school year 1947-48, the Evening High School Program started to provide educational opportunities for working students, particularly the employees in Clark Air Force Base. Likewise, the tertiary department was established with the 2-year Junior Normal College or Elementary Teacher's Certificate (ETC) as its initial program in response to the growing need for teachers in public schools. This program continued operating until 1963, when it was converted to a 4-year Normal College or the Bachelor of Science in Elementary Education (BEED) that was granted government recognition on February 11, 1955, this program continued operating until 1963, when it was converted to a 4-year Collegiate Normal Course of the Bachelor of Science in Elementary Education (BSEEd).</p>
+            <br>
+            <img src="images/history3.jpg">
+            <br><br>
+            <p>In 1948, the College of Commerce opened with a program, Bachelor of Science in Commerce whose government recognition was issued on December 3, 1951 or upon graduation of its first twenty three (23) students. In 1955, the Academy offered the 2-year Associate in Arts (also known as Preparatory Law Course) which was later converted into a 4-year Liberal Arts (or Bachelor of Arts) that was granted government recognition on May 18, 1960.</p>    
+            </div>
+            <div class="news-right">
+                <h3>Recent Posts</h3>
+                <div>
+                    <span>DAP-sponsored START Hackathon 2022</span>
+                    <span>25</span>
+                </div>
+                <div>
+                    <span>HCPI inks partnership with HAU</span>
+                    <span>18</span>
+                </div>
+                <div>
+                    <span>Reple Bags 3 Nat'l Press TILT Medals</span>
+                    <span>36</span>
+                </div>
+                <div>
+                    <span>SEd Hosts 5th Research Colloquium</span>
+                    <span>42</span>
+                </div>                  
+            </div>
     </div>
 </section>
 
@@ -71,6 +92,7 @@
     <a href="https://www.instagram.com/holyangel1933/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://www.linkedin.com/school/holyangel1933/" target="_blank"><i class="fa fa-linkedin"></i></a>
 </div>
+<p>Copyright © 2022 Holy Angel University • All Rights Reserved</p>
 <p>Made with <i class="fa fa-heart-o"></i> by <a href="https://www.youtube.com/channel/UCCt182VRsFF5bwdBi1Ktpqg" target="_blank" class="red-btn">Albert Tongol</a></p>
 </section>
 
