--- a/tongol-a/university/news2.html
+++ b/tongol-a/university/news2.html
@@ -45,32 +45,53 @@
 <section class="news-content">
     <div class="row">
         <div class="news-left">
-            <h2>Team MARICHECK bags THIRD place in the first-ever DAP-sponsored START Hackathon 2022</h2>
-            <h4>September 15, 2022</h4>
-            <h6>School of Engineering and Architecture</h6>
-            <p>The team MARICHECK of Holy Angel University’s School of Engineering and Architecture bagged 3rd place in the first-ever Development Academy of the Philippines (DAP) Center for  Strategic Futures (CSF) 48-hour START Hackathon through the Smart and Creative Communities (SSC) Program.</p>
+            <h2>International Research Publication (BSBA Students)</h2>
+            <h4>August 26, 2022</h4>
+            <h6>School of Business and Accountancy</h6>
+            <p>Ten (10) groups of Marketing Management students from the School of Business and Accountancy presented their research papers at the 16th Global Conference with the theme “Vax to the Future: Work in Transition. Of the 10 groups, five (5) successfully published their papers in the Journal of Global Business, accredited by the Andrew Gonzales Philippine Citation Index.</p>
             <br>
-            <img src="images/news1.jpg">
-            <br>
-            <br>
-            <p>Of the 58 entries from different industries, professional organizations, and HEIs nationwide, MARICHECK secured a spot in the Top 10 and competed in the 48-hour Hackathon. Team MARICHECK provides an innovative solution that encourages citizens’ participation in the planning and policymaking processes of Local Government Units through Digital Technology and Big Data.  A pitching competition was conducted as a culminating activity, with Team MARICHECK landing Third Place, with a cash prize of Php 25,000.00 and a network that will help develop and scale up their technology.</p>
-            <br>
-            <img src="images/news2.jpg">
+            <p>Below are the published works with corresponding researchers:</p>
+            <img src="images/news4.jpg">
             <br>
             <br>
-            <p>MARICHECK founders are Engr. Mellow Rutherford Mendez, Engr. Francis Emmanuel Ignacio, Ms. Mary Jay Capulong, Ms. Nicole Mercado, and Mr. Angel Gregory Lansangan. With their winning, The team automatically qualifies for the Cohort 3 Co-Incubation Program of Encephalon TBI and BARAS TBI.</p>
+            <p>1. Influence of social media strategies on the brand awareness of the customers: The case of Alfresco-style Restaurants in Pampanga during the pandemic.
+            <br>Members:  Ayra Neil Diola, Crisologo Canlas, Irene Shery Domondon, Athina Abbie Anne Mitu,  Jennielyn Samson, and Jee Ann Santos</p>
             <br>
-            <p>Congratulations, Angelites. We are proud of you!</p>    
-                <div class="comment-box">
-                    <h3>Leave a comment</h3>
-                    <form class="comment-form">
-                        <input type="text" placeholder="Enter Name">
-                        <input type="email" placeholder="Enter Email">
-                        <textarea rows="5" placeholder="Your comment"></textarea>
-                        <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
-                    </form>
-                </div>
+            <img src="images/news5.jpg">
+            <br>
+            <br>
+            <p>2. The Impact of Logistics Service Quality on Customer Satisfaction leading to Customer Retention: the case of Shopee customers in Pampanga Members
+            <br>Members: Cunan, Ma. Aliza D. Escobar, Moses John S. Galang, Naddine Q. Martinez, Pamela Joy V. Punzalan, and Julliene Marla A.</p>
+            <br>
+            <img src="images/news6.jpg">
+            <br>
+            <br>
+            <p>3. The Shift to Digital: Kapampangans' Behavioral Intention to Use Online Food Delivery Services During the Covid-19 Pandemic
+            <br>Members: Aquino, Nicoll Bianca F., Carlos, Alexis Jhermaine Q., Galang, Clariz Lagman, Angelika C. Plasencia, Alisha Lee Raine V., and Ronquillo, Carl Angelo P.</p>
+            <br>
+            <img src="images/news7.jpg">
+            <br>
+            <br>
+            <p>4. An Analysis of The Marketing Mix on The Clothing Line Industry and Purchase Intention of Kapampangan Shoppers Using the Theory of Planned Behavior
+            <br>Members: Reyes, Quennie Anne B.,  Banania, Odelyn C., Dalmacio, Nicole Anne Fhaye S., Manalastas, Jeris Louise F., and Tuliao, Jumelah Claire S.</p>
+            <br>
+            <img src="images/news8.jpg">
+            <br>
+            <br>
+            <p>5. Kapampangan Gen Z's Attitude and Behavior towards Purchasing Sustainable Packaging
+            <br>Members: Badian, Ji-An B. Concepcion, Marilou D. Dimasangal, Ma. Camille Nabung, Charlize Adrienne E. Nunag, Mikaela Coleen R. Salunga, and Denzel Angelo L.</p>    
+            <br>
+            <p>Congratulations, Angelites. We are proud of you!</p>
+            <div class="comment-box">
+                <h3>Leave a comment</h3>
+                <form class="comment-form">
+                    <input type="text" placeholder="Enter Name">
+                    <input type="email" placeholder="Enter Email">
+                    <textarea rows="5" placeholder="Your comment"></textarea>
+                    <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
+                </form>
             </div>
+        </div>
         <div class="news-right">
             <h3>Recent Posts</h3>
             <div>
