--- a/tongol-a/university/about.html
+++ b/tongol-a/university/about.html
@@ -58,25 +58,25 @@
             <br><br>
             <p>In 1948, the College of Commerce opened with a program, Bachelor of Science in Commerce whose government recognition was issued on December 3, 1951 or upon graduation of its first twenty three (23) students. In 1955, the Academy offered the 2-year Associate in Arts (also known as Preparatory Law Course) which was later converted into a 4-year Liberal Arts (or Bachelor of Arts) that was granted government recognition on May 18, 1960.</p>    
             </div>
-            <div class="news-right">
-                <h3>Recent Posts</h3>
-                <div>
-                    <span>DAP-sponsored START Hackathon 2022</span>
-                    <span>25</span>
-                </div>
-                <div>
-                    <span>HCPI inks partnership with HAU</span>
-                    <span>18</span>
-                </div>
-                <div>
-                    <span>Reple Bags 3 Nat'l Press TILT Medals</span>
-                    <span>36</span>
-                </div>
-                <div>
-                    <span>SEd Hosts 5th Research Colloquium</span>
-                    <span>42</span>
-                </div>                  
+        <div class="news-right">
+            <h3>Recent Posts</h3>
+            <div>
+                <a href="news.html" class="red-btn"><span>DAP-sponsored START Hackathon 2022</span></a>
+                <span>September 15</span>
             </div>
+            <div>
+                <a href="news2.html" class="red-btn"><span>International Research Publication</span></a>
+                <span>August 26</span>
+            </div>
+            <div>
+                <a href="news3.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
+                <span>August 10</span>
+            </div>
+            <div>
+                <a href="news4.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
+                <span>42</span>
+            </div>                  
+        </div>
     </div>
 </section>
 
