--- a/tongol-a/university/news2.html
+++ b/tongol-a/university/news2.html
@@ -46,8 +46,8 @@
     <div class="row">
         <div class="news-left">
             <h2>International Research Publication (BSBA Students)</h2>
+            <h5>School of Business and Accountancy</h5>
             <h4>August 26, 2022</h4>
-            <h6>School of Business and Accountancy</h6>
             <p>Ten (10) groups of Marketing Management students from the School of Business and Accountancy presented their research papers at the 16th Global Conference with the theme “Vax to the Future: Work in Transition. Of the 10 groups, five (5) successfully published their papers in the Journal of Global Business, accredited by the Andrew Gonzales Philippine Citation Index.</p>
             <br>
             <p>Below are the published works with corresponding researchers:</p>
@@ -103,12 +103,12 @@
                 <span>August 26</span>
             </div>
             <div>
-                <a href="news3.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
-                <span>August 10</span>
+                <a href="news4.html" class="red-btn"><span>HAU-IRB receives PHREB Level 2 Accreditation</span></a>
+                <span>August 18</span>
             </div>
             <div>
-                <a href="news4.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
-                <span>42</span>
+                <a href="news3.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
+                <span>August 10</span>
             </div>                  
         </div>   
     </div>
