--- a/tongol-a/university/news3.html
+++ b/tongol-a/university/news3.html
@@ -45,32 +45,27 @@
 <section class="news-content">
     <div class="row">
         <div class="news-left">
-            <h2>Team MARICHECK bags THIRD place in the first-ever DAP-sponsored START Hackathon 2022</h2>
-            <h5>School of Engineering and Architecture</h5>
-            <h4>September 15, 2022</h4>
-            <p>The team MARICHECK of Holy Angel University’s School of Engineering and Architecture bagged 3rd place in the first-ever Development Academy of the Philippines (DAP) Center for  Strategic Futures (CSF) 48-hour START Hackathon through the Smart and Creative Communities (SSC) Program.</p>
+            <h2>International Research Publication (BSBA Students)</h2>
+            <h5>School of Business and Accountancy</h5>
+            <h4>August 26, 2022</h4>
+            <img src="images/news9.jpg">
+            <p>The School of Education (SEd) of Holy Angel University (HAU) hosted its 5th Research Colloquium via Zoom Meetings on August 6, 2022.  The objective of the said colloquium was to share the most updated data of the studies that are relevant to the field of Education. The activity was attended by 112 participants from the undergraduate Teacher Education, Master’s, and Doctorate programs.</p>
+            <p>The colloquium commenced with a lecture by Dr. Mark Joseph T. Calano, one of the professors in the doctorate program.  The lecture focused on Paraphrasing the Review of Related Literature and Citation in APA 7. After the lecture,  6 selected researches from the graduate and undergraduate programs were presented.</p>
+            <img src="images/news10.jpg">
             <br>
-            <img src="images/news1.jpg">
-            <br>
-            <br>
-            <p>Of the 58 entries from different industries, professional organizations, and HEIs nationwide, MARICHECK secured a spot in the Top 10 and competed in the 48-hour Hackathon. Team MARICHECK provides an innovative solution that encourages citizens’ participation in the planning and policymaking processes of Local Government Units through Digital Technology and Big Data.  A pitching competition was conducted as a culminating activity, with Team MARICHECK landing Third Place, with a cash prize of Php 25,000.00 and a network that will help develop and scale up their technology.</p>
-            <br>
-            <img src="images/news2.jpg">
-            <br>
-            <br>
-            <p>MARICHECK founders are Engr. Mellow Rutherford Mendez, Engr. Francis Emmanuel Ignacio, Ms. Mary Jay Capulong, Ms. Nicole Mercado, and Mr. Angel Gregory Lansangan. With their winning, The team automatically qualifies for the Cohort 3 Co-Incubation Program of Encephalon TBI and BARAS TBI.</p>
-            <br>
-            <p>Congratulations, Angelites. We are proud of you!</p>    
-                <div class="comment-box">
-                    <h3>Leave a comment</h3>
-                    <form class="comment-form">
-                        <input type="text" placeholder="Enter Name">
-                        <input type="email" placeholder="Enter Email">
-                        <textarea rows="5" placeholder="Your comment"></textarea>
-                        <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
-                    </form>
-                </div>
+            <p>Among the researches presented were:  “Comparative Study on the Use of E-Infographic Versus Traditional Method as to the Teaching of Health Optimizing Physical Education 2”, presented by Haynes Angelo Narciso, a graduate of Master in Physical Education and Sports; “Emotional Intelligence and Teacher Performance”, presented by  Joan Mae De Jesus,  a graduate of Master in Educational Management; “Evaluation of the Laboratory Manual of the Senior High School Department of a University in Pampanga vis-à-vis Green Chemistry: A Basis for Policy Recommendation”, by Shaira M. Lansangan, Master in Teaching Science;  “Multi-theoretical Unraveling of African Trickster: Curriculum Alignment of Language and Literacy Domains in Grade 8 English”,by Angelie Salalac, Master of Arts in English Language and Literature Teaching; “Assessment of the Child-Friendly School System: An Input to CFSS Implementation” , by Kathlene Kaye C. Alvarado, Doctor of Philosophy in Educational Management; and “Lived Experiences of Edukasyon sa Pagpapakatao Teachers in Doing Gender-Mainstreaming”, presented by Jonard N. Balilu and Angel Ruselle M. Peria, graduates of Bachelor of Secondary Education major in Religious and Values Education.</p>
+            <p>Alma M. Natividad, Ph.D.,  Dean of School of Education and Cecilia Teodoro, Ed.D., Graduate Program Coordinator, graced the event and gave their opening and closing remarks, respectively. In her opening remarks, Dean Natividad proudly commended and extended her gratitude to the people behind the academic event. In the closing remarks, Dr. Teodoro reiterated the importance of ethical consideration and why we should always give credit and ask for permission from the researchers. Dr. Mutya Paulino, the program chairperson of the department attended the event as well.</p>
+            <img src="images/news11.png">
+            <div class="comment-box">
+                <h3>Leave a comment</h3>
+                <form class="comment-form">
+                    <input type="text" placeholder="Enter Name">
+                    <input type="email" placeholder="Enter Email">
+                    <textarea rows="5" placeholder="Your comment"></textarea>
+                    <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
+                </form>
             </div>
+        </div>
         <div class="news-right">
             <h3>Recent Posts</h3>
             <div>
