--- a/tongol-a/university/news4.html
+++ b/tongol-a/university/news4.html
@@ -45,32 +45,22 @@
 <section class="news-content">
     <div class="row">
         <div class="news-left">
-            <h2>Team MARICHECK bags THIRD place in the first-ever DAP-sponsored START Hackathon 2022</h2>
-            <h5>School of Engineering and Architecture</h5>
-            <h4>September 15, 2022</h4>
-            <p>The team MARICHECK of Holy Angel University’s School of Engineering and Architecture bagged 3rd place in the first-ever Development Academy of the Philippines (DAP) Center for  Strategic Futures (CSF) 48-hour START Hackathon through the Smart and Creative Communities (SSC) Program.</p>
-            <br>
-            <img src="images/news1.jpg">
-            <br>
-            <br>
-            <p>Of the 58 entries from different industries, professional organizations, and HEIs nationwide, MARICHECK secured a spot in the Top 10 and competed in the 48-hour Hackathon. Team MARICHECK provides an innovative solution that encourages citizens’ participation in the planning and policymaking processes of Local Government Units through Digital Technology and Big Data.  A pitching competition was conducted as a culminating activity, with Team MARICHECK landing Third Place, with a cash prize of Php 25,000.00 and a network that will help develop and scale up their technology.</p>
-            <br>
-            <img src="images/news2.jpg">
-            <br>
-            <br>
-            <p>MARICHECK founders are Engr. Mellow Rutherford Mendez, Engr. Francis Emmanuel Ignacio, Ms. Mary Jay Capulong, Ms. Nicole Mercado, and Mr. Angel Gregory Lansangan. With their winning, The team automatically qualifies for the Cohort 3 Co-Incubation Program of Encephalon TBI and BARAS TBI.</p>
-            <br>
-            <p>Congratulations, Angelites. We are proud of you!</p>    
-                <div class="comment-box">
-                    <h3>Leave a comment</h3>
-                    <form class="comment-form">
-                        <input type="text" placeholder="Enter Name">
-                        <input type="email" placeholder="Enter Email">
-                        <textarea rows="5" placeholder="Your comment"></textarea>
-                        <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
-                    </form>
-                </div>
+            <h2>HAU-IRB formally receives its PHREB Level 2 Accreditation</h2>
+            <h5>University News</h5>
+            <h4>August 18, 2022</h4>
+            <img src="images/news12.jpg">
+            <p>The Holy Angel University-Institutional Review Board was formally awarded its Level 2 accreditation by the Philippine Health Research Ethics Board (PHREB). The accreditation certificate was virtually presented during the awarding program of the 15th PNHRS Week Celebration held on August 12 at Clark Marriott, Clark Freeport Zone, Pampanga. HAU is one of the 17 institutions (hospitals, medical centers, research and development consortia, and academia) that received the recognition that is effective for three years. With this accreditation, the research system in the University is further strengthened with research ethics as its framework for scholarship that involves human participants.</p>
+            <img src="images/news13.jpg">
+            <div class="comment-box">
+                <h3>Leave a comment</h3>
+                <form class="comment-form">
+                    <input type="text" placeholder="Enter Name">
+                    <input type="email" placeholder="Enter Email">
+                    <textarea rows="5" placeholder="Your comment"></textarea>
+                    <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
+                </form>
             </div>
+        </div>
         <div class="news-right">
             <h3>Recent Posts</h3>
             <div>
@@ -88,7 +78,7 @@
             <div>
                 <a href="news3.html" class="red-btn"><span>SEd Hosts 5th Research Colloquium</span></a>
                 <span>August 10</span>
-            </div>                  
+            </div>            
         </div>   
     </div>
 </section>
